fix layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,14 @@ a {
   display:inline-block;
   float:right;
   margin:10px 10px;
-  padding:0 15px;
+  padding:0 10.85px;
   border-radius:50px;
   font-size:50px;
   cursor:pointer;
 }
 .btn-back:hover {
   background-color: #1e292d;
-  color:#111;
+  color: #111;
 }
 
 .form-container {
@@ -41,39 +41,47 @@ a {
   width:500px;
   text-align:left;
 }
-.form-container h1,
+.form-container h1 {
+  font-size:2em;
+  text-align: center;
+  font-weight:400;
+}
 .form-container h3 {
+  font-size:1.5em;
   text-align: center;
   font-weight:400;
 }
 .top-bar {
-  margin-top: 32px;
-  margin-bottom: 16px;
+  margin: 32px -10px 10px -10px;
   display:flex;
 }
 .input-1 {
-  flex:1;
+  flex-shrink:0;
+  color:#fff;
+  max-width:240px;
   border:solid 2px #ccc;
   border-radius:3px;
   background-color: #2a3a3f;
-  box-sizing: border-box;
   font-size:1.2em;
-  margin:8px;
-  padding:4px;
+  padding:4px 8px;
+  margin: 0 10px 10px 10px;
+  box-sizing: border-box;
 }
 .query {
   max-width:100%;
-  padding:8px;
 }
 .query textarea {
   resize:vertical;
   width:100%;
   height:200px;
+  color:#fff;
   border:solid 2px #ccc;
   border-radius:3px;
   background-color: #2a3a3f;
   padding:4px;
-  font-size:1.2em;
+  box-sizing: border-box;
+  font-size: 1.2em;
+  font-family: 'Roboto', 'sans-serif';
 }
 .submit-container {
   text-align:center;
@@ -81,6 +89,7 @@ a {
 .submit-1 {
   width:60%;
   background-color: #2a3a3f;
+  color:#fff;
   font-size:1.2em;
   border: solid 2px #1d9edd;
   border-radius:20px;
@@ -113,6 +122,7 @@ ul.header-menu {
   letter-spacing:normal;
   text-decoration:none;
   opacity:0.5;
+  box-sizing: border-box;
 }
 .header-menu li a:hover {
   color:#fff;
@@ -134,7 +144,8 @@ ul.header-menu {
 .title {
   display:inline-block;
   padding:16px 32px;
-  font-size:2em
+  font-size:2em;
+  font-weight:500;
 }
 
 #portfolio {
@@ -194,7 +205,7 @@ ul.header-menu {
   font-size:1.3em;
 }
 .portfolio-description h3 {
-  color:#111;
+  color:#333;
 }
 .portfolio-description .feedback {
   color:#666;
@@ -210,11 +221,10 @@ ul.header-menu {
   background-color: #bbb;
   padding:4px 8px;
   border-radius:4px;
-  color:#111;
+  color:#333;
 }
 .btn-1:hover {
   background-color: #aaa;
-  color:#111;
   text-decoration:none;
 }
 
@@ -349,6 +359,9 @@ ul.header-menu {
 @media only screen and (max-width:600px) {
   .top-bar {
     flex-direction:column;
+  }
+  .input-1 {
+    max-width:none;
   }
   .form-container {
     width:80%;
